Specify Setuptools ‘upload’ command must GnuPG-sign files for upload.

--- a/setup.cfg
+++ b/setup.cfg
@@ -9,6 +9,11 @@ distribute = register sdist bdist_wheel upload
 # Build a single “universal wheel” (for Python 2 and Python 3)?
 universal = true
 
+[upload]
+
+# Sign distributions, and upload the signing public key?
+sign = true
+
 
 # Local variables:
 # coding: utf-8
